finalized site- changed link colors to white

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="home">
       <h1>Broadway Design<br>
         <p><span class="contents">
-            <a href=#home>Home</a><br><br>
+            <a href=#home><br>Home</a><br><br>
             <a href=#process>Process</a><br><br>
             <a href=#work>Work</a><br><br>
             <a href=#team>Team</a><br><br>
@@ -18,10 +18,13 @@
     </div>
     <div id="process">
       <h2>Our Process</h2>
+      <img src="resources\images\identify.svg" alt="A swirly arrow"/>
       <h3>Identify</h3>
         <p>We focus on the most important details.</p>
+      <img src="resources\images\understand.svg" alt="A circle formed by two arched arrows"/>
       <h3>Understand</h3>
         <p>We study our projects inside and out.</p>
+      <img src="resources\images\execute.svg" alt="A 3-D arrow with height"/>
       <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
     </div>
